--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.kalicalitally.instaher">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.hardware.camera" android:required="true"/>
+    <uses-permission
+        android:name="android.hardware.camera"
+        android:required="true" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -16,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:theme="@style/AppTheme.NoActionBar">
-
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,8 +29,9 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"></activity>
-        <activity android:name=".CameraActivity"></activity>
+            android:label="@string/title_activity_home" />
+        <activity android:name=".CameraActivity" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.kalicalitally.instaher"
@@ -38,6 +42,7 @@
                 android:resource="@xml/fileprovider" />
         </provider>
 
+        <activity android:name=".FeedActivity"></activity>
     </application>
 
 </manifest> <!-- TODO: vid. 3 time 7:28 -->
